--- a/TestBootstrap/angular.json
+++ b/TestBootstrap/angular.json
@@ -31,9 +31,16 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              // "node_modules/jquery/dist/jquery.min.js",
+              // "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              // "node_modules/bootstrap/dist/js/bootstrap.esm.js",
+              // "node_modules/@popperjs/core/dist/esm/popper.js",
+              // "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -94,9 +101,13 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              // "node_modules/@popperjs/core/dist/esm/popper.js",
+              // "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         },
         "lint": {
