--- a/TestBootstrap/package.json
+++ b/TestBootstrap/package.json
@@ -23,6 +23,9 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "jquery": "^3.6.1",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
